--- a/sunburst_plots/sunburst.html
+++ b/sunburst_plots/sunburst.html
@@ -1,15 +1,18 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
     <meta charset="utf-8" />
     <title></title>
 </head>
 <body>
-    link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <style>
         circle,
         path {
             cursor: pointer;
+            stroke-width: 1.8;
+            stroke: black;
+            opacity: 0.35;
         }
 
         circle {
@@ -26,7 +29,7 @@
 
         html {
             font-family: "Open Sans";
-            font-size: 11px
+            font-size: 12px
         }
     </style>
     <script src="https://d3js.org/d3.v3.min.js"></script>
@@ -44,10 +47,15 @@
         var x = d3.scaleLinear()
             .range([0, 2 * Math.PI]);
 
-        var y = d3.scaleSqrt()
+        var y = d3.scaleLinear()
             .range([0, radius]);
 
-        var color = d3.scaleOrdinal(d3.schemeCategory20);
+        // From: https://observablehq.com/@d3/color-schemes
+        rainbow = ["#6e40aa","#bf3caf","#fe4b83","#ff7847","#e2b72f","#aff05b","#52f667","#1ddfa3","#23abd8","#4c6edb","#6e40aa"];
+        sinebow = ["#ff4040","#e78d0b","#a7d503","#58fc2a","#18f472","#00bfbf","#1872f4","#582afc","#a703d5","#e70b8d","#ff4040"];
+        spectral = ["#9e0142","#d53e4f","#f46d43","#fdae61","#fee08b","#ffffbf","#e6f598","#abdda4","#66c2a5","#3288bd","#5e4fa2"];
+        viridis = ["#440154","#482475","#414487","#355f8d","#2a788e","#21918c","#22a884","#44bf70","#7ad151","#bddf26","#fde725"];
+        var color = d3.scaleOrdinal(spectral);
 
         var partition = d3.partition();
 
@@ -67,6 +75,7 @@
         var text,
             path;
 
+        var threshold = 110; // put 110 for sunburst_plot_number.json, 0 for span
         d3.json("sunburst_plot_number.json", function (error, root) {
             if (error) throw error;
 
@@ -80,7 +89,7 @@
             path = svg.selectAll(".node")
                 .append("path")
                 .attr("d", arc)
-                .style("fill", function (d) { return color((d.children ? d : d.parent).data.name); })
+                .style("fill", function (d) { return (d.data.name == "" || d.data.name == "how many")? "#ffffff" : color(d.data.name); }) //(d.children ? d : d.parent).data.name); })
                 .on("click", click);
 
             text = svg.selectAll(".node")
@@ -89,13 +98,11 @@
                     return "rotate(" + computeTextRotation(d) + ")";
                 })
                 .attr("x", function (d) {
-                    return y(d.y0);
+                    return d.depth==0? y(d.y0)-25: y(d.y0);
                 })
-                .attr("dx", "6") // margin
+                .attr("dx", "5") // margin
                 .attr("dy", ".35em") // vertical-align
-                .text(function (d) {
-                    return d.data.name === "root" ? "" : d.data.name
-                });
+                .text(function (d) { return d.value>threshold? d.data.name : ""; });
         });
 
         function click(d) {
@@ -123,14 +130,15 @@
                             .attr("class", "visible")
                             .attr("transform", function () { return "rotate(" + computeTextRotation(e) + ")" })
                             .attr("x", function (d) { return y(d.y0); })
-                            .text(function (d) {
-                                return d.data.name === "root" ? "" : d.data.name
-                            });
+                            .text(function (d) { return d.data.name;  });
                     }
                 });
         }
 
         function computeTextRotation(d) {
+            if (d.depth == 0) {
+                return 0;
+            }
             return (x((d.x0 + d.x1) / 2) - Math.PI / 2) / Math.PI * 180;
         }
 
